Update title and add robots meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css">
-        <title>Title</title>
+        <title>Blockley Lodge No.6345 – Summons</title>
+        <meta name="robots" content="noindex">
     </head>
     <body>
     <main>
