--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p><strong>The Lodge welcome enquiries for Membership.</strong></p> 
 
-<p><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always beneficial.”</em> – Dr Oliver<p>
+<p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always beneficial.”</em> – Dr Oliver<p>
 
 
 <p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Holy Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch Representative.</p>
