Add left alignment to meeting invitation text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Blockley Lodge</h1>
         <h4>Of Antient, Free and Accepted Masons, N. 6245, Oxford</h4>
         <h2>W Bro. Dr Daniel Antonio Villar Maldonado, Worshipful Master </h2>
-        <p>Dear Sir and Brother,<br>
-        <p>By command of the Worshipful Master, I hereby summon and invite you to attend the 557th regular meeting of the Blockley Lodge, to be held at: Cardinal House, 2-4 Baldon Lane, Marsh Baldon, OX44 9LT on <strong>Saturday 15th November 2025 at 12.00</strong><br>
+        <p class="left">Dear Sir and Brother,<br>
+        <p class="left">By command of the Worshipful Master, I hereby summon and invite you to attend the 557th regular meeting of the Blockley Lodge, to be held at: Cardinal House, 2-4 Baldon Lane, Marsh Baldon, OX44 9LT on <strong>Saturday 15th November 2025 at 12.00</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
