--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h4>Of Antient, Free and Accepted Masons, N. 6245, Oxford</h4>
         <h2>W Bro. Dr Daniel Antonio Villar Maldonado, Worshipful Master </h2>
         <p class="left">Dear Sir and Brother,<br>
-        <p class="left">By command of the Worshipful Master, I hereby summon and invite you to attend the 557th regular meeting of the Blockley Lodge, to be held at: Cardinal House, 2-4 Baldon Lane, Marsh Baldon, OX44 9LT on <strong>Saturday 15th November 2025 at 12.00</strong><br>
-        Yours faithfully and fraternally,<br>
+        <p class="left">By command of the Worshipful Master, I hereby summon and invite you to attend the 557th regular meeting of the Blockley Lodge, to be held at: Cardinal House, 2-4 Baldon Lane, Marsh Baldon, OX44 9LT on <strong>Saturday 15th November 2025 at 12.00</strong></p>
+        <p class=""left">Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
         <h3>Agenda</h3>
