--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations preferred</p>
     
 
-<p><strong>The Lodge welcome enquiries for Membership.</strong></p> 
+<p><strong>The Lodge welcomes enquiries for Membership.</strong></p> 
 
 <p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always beneficial.”</em> – Dr Oliver<p>
 
