Fix grammar and punctuation in index.html

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </ol>
 <p><em>Dress: dark or morning suit, undress reglia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="dining.blockleylodge.org.uk">booking form</a> (Deadline Saturday 1st February) </p>
+        <p><strong>Dining:</strong> Please use this <a href="dining.blockleylodge.org.uk">booking form</a> (deadline Saturday 1st February).</p>
 
-<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations preferred</p>
+<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations are preferred.</p>
     
 
 <p><strong>The Lodge welcomes enquiries for Membership.</strong></p> 
