--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ol>
 <p><em>Dress: dark or morning suit, undress reglia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk">booking form</a> (deadline <span id="booking-deadline"></span></p>
+        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk">booking form</a> (deadline <span id="booking-deadline"></span>)</p>
 
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations are preferred.</p>
     
