Revise membership text and remove meeting details
Updated membership enquiry text and removed next meeting section.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations are preferred.</p>
     
 
-<p><strong>The Lodge welcomes enquiries for Membership.</strong></p> 
+<p><strong>The Lodge welcomes enquiries for membership and candidates for initation.</strong></p> 
 
 <p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always beneficial.”</em> – Dr Oliver<p>
 
@@ -45,15 +45,6 @@
 <p><a href="https://officers.blockleylodge.org.uk">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk">Useful Links</a> | <a href="https://friends.blockleylodge.org.uk">Join our mailing list</a></p>
 
     </main>
-
-  <div>
-  <h2>Next Meeting</h2>
-  <p id="meeting-date"></p>
-
-  <h3>Booking Deadline</h3>
-  <p id="booking-deadline"></p>
-</div>
-
 <script>
   function getNextMeetingDate(today = new Date()) {
     // Normalize "today" to midnight so comparisons work correctly
