Emphasize nominations for Master and Treasurer
Added emphasis to the nominations for Master and Treasurer.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>To take as read and consider for confirmation the minutes of the last Regular Meeting.</li>
             <li>To invest those Officers who were not present at the Installation Meeting.</li>
             <li>To pass Bro. Alex Price, initiated on 26th March 2024.</li>
-            <li>To elect a Master and Treasurer for the ensuing year. The only nominations of which the Secretary is aware are Bro Alexander Humphries as Master and W Bro Matthew Standage as Treasurer, and subject to the provisions of Rules 105(a) and 112(a) respectively, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</li>
+            <li>To elect a Master and Treasurer for the ensuing year. <em>The only nominations of which the Secretary is aware are Bro Alexander Humphries as Master and W Bro Matthew Standage as Treasurer, and subject to the provisions of Rules 105(a) and 112(a) respectively, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</em></li>
             <li>To ballot for the exclusion of Bros. Yasin, Richardson, Sisokin and Davis for non-payment of annual subscriptions in accordance with the Lodge bylaws and Rule 181 BoC.</li>
             <li>To recieve reports and notices of propositions.</li>
             <li>To close the Lodge.</li>
