Fix typo in Useful Links section of index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Holy Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch Representative.</p>
 
 
-<p><a href="https://officers.blockleylodge.org.uk">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk">Useful Links</a> | <a href="https://friends.blockleylodge.org.uk">Join our mailing list</a></p>
+<p><a href="https://officers.blockleylodge.org.uk">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk">Useful links</a> | <a href="https://friends.blockleylodge.org.uk">Join our mailing list</a></p>
 
     </main>
 <script>
