Update meeting details and agenda in index.html

--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
         <h1>Blockley Lodge</h1>
         <h4>Of Antient, Free and Accepted Masons, N. 6345, Oxford</h4>
         <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful Master </h2>
-        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong><span id="meeting-date"></span> at noon.</strong><br>
+        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at noon.</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
         <h3>Agenda</h3>
         <ol>
             <li>To open the Lodge.</li>
+            <li>To read the Dispensation</li>
             <li>To take as read and consider for confirmation the minutes of the last Regular Meeting.</li>
-            <li>To invest those Officers who were not present at the Installation Meeting.</li>
-            <li>To pass Bro. Alex Price, initiated on 26th March 2024.</li>
-            <li>To elect a Master and Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware are Bro Alexander Humphries as Master and W Bro Matthew Standage as Treasurer, and subject to the provisions of Rules 105(a) and 112(a) respectively, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</em></li>
-            <li>To ballot for the exclusion of Bros. Yasin, Richardson, Sisokin and Davis for non-payment of annual subscriptions in accordance with the Lodge bylaws and Rule 181 BoC.</li>
+            <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</em></li>
+            <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
+            <li>Appoint and invest Officers of the Lodge</li>
+            <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
             <li>To recieve reports and notices of propositions.</li>
             <li>To close the Lodge.</li>
         </ol>
