Correct minute confirmation wording and update dining deadline

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ol>
             <li>To open the Lodge.</li>
             <li>To read the Dispensation</li>
-            <li>To take as read and consider for confirmation the minutes of the last Regular Meeting.</li>
+            <li>To take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</em></li>
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
             <li>Appoint and invest Officers of the Lodge</li>
@@ -30,7 +30,7 @@
         </ol>
 <p><em>Dress: dark or morning suit, undress reglia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk">booking form</a> (deadline <span id="booking-deadline"></span>)</p>
+        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk">booking form</a> (deadline Saturday 31 Janaury) <!--<span id="booking-deadline"></span>-->)</p>
 
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations are preferred.</p>
     
