Add target='_blank' to external links in index.html

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </ol>
 <p><em>Dress: dark or morning suit, undress reglia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk">booking form</a> (deadline Saturday 31 Janaury) <!--<span id="booking-deadline"></span>-->)</p>
+        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline Saturday 31 Janaury) <!--<span id="booking-deadline"></span>-->)</p>
 
-<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345">Relief Chest</a>. Electronic donations are preferred.</p>
+<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345" target="_blank">Relief Chest</a>. Electronic donations are preferred.</p>
     
 
 <p><strong>The Lodge welcomes enquiries for membership and candidates for initation.</strong></p> 
@@ -43,7 +43,7 @@
 <p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Holy Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch Representative.</p>
 
 
-<p><a href="https://officers.blockleylodge.org.uk">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk">Useful links</a> | <a href="https://friends.blockleylodge.org.uk">Join our mailing list</a></p>
+<p><a href="https://officers.blockleylodge.org.uk" target="_blank">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login" target="_blank">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk" target="_blank">Useful links</a> | <a href="https://friends.blockleylodge.org.uk" target="_blank">Join our mailing list</a></p>
 
     </main>
 <script>
