--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ol>
 <p><em>Dress: dark or morning suit, undress reglia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline Saturday 31 Janaury) <!--<span id="booking-deadline"></span>-->)</p>
+        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline Saturday 31 January<!--<span id="booking-deadline"></span>-->)</p>
 
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345" target="_blank">Relief Chest</a>. Electronic donations are preferred.</p>
     
