Fix non-breaking spaces in index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
     <main>
         <img src="logo.svg" class=logo>
-        <h1>Blockley&nbps;Lodge</h1>
-        <h4>Of Antient, Free and Accepted Masons, N. 6345,&nbps;Oxford</h4>
-        <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbps;Master</h2>
-        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at noon.</strong><br>
+        <h1>Blockley&nbsp;Lodge</h1>
+        <h4>Of Antient, Free and Accepted Masons, N. 6345,&nbsp;Oxford</h4>
+        <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbsp;Master</h2>
+        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
@@ -32,15 +32,15 @@
 
         <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline Saturday 31 January<!--<span id="booking-deadline"></span>-->)</p>
 
-<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345" target="_blank">Relief Chest</a>. Electronic donations are&nbps;preferred.</p>
+<p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345" target="_blank">Relief Chest</a>. Electronic donations are&nbsp;preferred.</p>
     
 
-<p><strong>The Lodge welcomes enquiries for membership and candidates for&nbps;initation.</strong></p> 
+<p><strong>The Lodge welcomes enquiries for membership and candidates for&nbsp;initation.</strong></p> 
 
-<p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always&nbps;beneficial.”</em> –&nbps;Dr&nbps;Oliver<p>
+<p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always&nbsp;beneficial.”</em> –&nbsp;Dr&nbsp;Oliver<p>
 
 
-<p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Holy Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch&nbps;Representative.</p>
+<p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Holy Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch&nbsp;Representative.</p>
 
 
 <p><a href="https://officers.blockleylodge.org.uk" target="_blank">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login" target="_blank">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk" target="_blank">Useful links</a> | <a href="https://friends.blockleylodge.org.uk" target="_blank">Join our mailing list</a></p>
