Fix typo in dress code description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>To recieve reports and notices of propositions.</li>
             <li>To close the Lodge.</li>
         </ol>
-<p><em>Dress: dark or morning suit, undress reglia</em></p>
+<p><em>Dress: dark or morning suit, undress regalia</em></p>
 
         <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline Saturday 31 January<!--<span id="booking-deadline"></span>-->)</p>
 
