--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Agenda</h3>
         <ol>
             <li>To open the Lodge.</li>
-            <li>To read the Dispensation</li>
+            <li>To read the Dispensation.</li>
             <li>To take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a ballot.</em></li>
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
