--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbsp;Master</h2>
         <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
-            W. Bro. Matthew Standage ProvGPurs, Secretary<br>
+            W. Bro. Matthew Standage ProvGPurs, Acting Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
         <h3>Agenda</h3>
         <ol>
