--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
         <h3>Agenda</h3>
         <ol>
-            <li>To open the Lodge.</li>
-            <li>To read the Dispensation.</li>
-            <li>To take as read and consider for confirmation the minutes of the last regular meeting.</li>
+            <li>Open the Lodge.</li>
+            <li>Read the Dispensation.</li>
+            <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Ballot for as joining members those brethren detailed in Annex A.</li>
             <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li>
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
             <li>Appoint and invest Officers of the Lodge</li>
             <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
-            <li>To recieve reports and notices of propositions.</li>
-            <li>To close the Lodge.</li>
+            <li>Recieve reports and notices of propositions.</li>
+            <li>Close the Lodge.</li>
         </ol>
 <p><em>Dress: dark or morning suit, undress regalia</em></p>
 
