--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Ballot for as joining members those brethren detailed in Annex A.</li>
             <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li>
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
-            <li>Appoint and invest Officers of the Lodge</li>
+            <li>Appoint and invest Officers of the Lodge.</li>
             <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
             <li>Recieve reports and notices of propositions.</li>
             <li>Close the Lodge.</li>
