--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Acting Secretary<br>
             <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
+            <p class="memoriam">In Memoriam W. Bro. Rober Harris</p>
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
