--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch&nbsp;Representative.</p>
 
 
-<p><a href="https://officers.blockleylodge.org.uk" target="_blank">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login" target="_blank">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk" target="_blank">Useful links</a> | <a href="https://friends.blockleylodge.org.uk" target="_blank">Join our mailing list</a></p>
+<p class="footer-links"><a href="https://officers.blockleylodge.org.uk" target="_blank">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login" target="_blank">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk" target="_blank">Useful links</a> | <a href="https://friends.blockleylodge.org.uk" target="_blank">Join our mailing list</a></p>
 
     </main>
 <script>
