--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary (Acting)<br>
-            <a href="mailt0:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
+            <a href="mailto:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
             <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris</p>
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
-            <li>Read the Dispensation.</li>
+            <li>Read the Dispensations.</li>
             <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Ballot for as joining members those brethren detailed in Annex A.</li>
             <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li>
