--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p class="psmall"><em>“Be very cautious, whom you recommend as a candidate for Membership; one false step on this point may be fatal. If you introduce a disputatious person, confusion will be produced which may end in the dissolution of the Lodge. If you have a good Lodge keep it select. Great numbers are not always&nbsp;beneficial.”</em> –&nbsp;Dr&nbsp;Oliver<p>
 
 
-<p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Royal Arch&nbsp;Representative.</p>
+<p class="royal-arch">Any Brother who is interested in pursuing Exaltation in the Royal Arch, for which the qualification is to have been a Master Mason for at least four weeks, is invited to contact the Lodge&nbsp;Secretary.</p>
 
 
 <p class="footer-links"><a href="https://officers.blockleylodge.org.uk" target="_blank">Lodge Officers</a> | <a href="https://mobile.portal.ugle.org.uk/auth/login" target="_blank">UGLE Portal</a> | <a href="https://links.blockleylodge.org.uk" target="_blank">Useful links</a> | <a href="https://friends.blockleylodge.org.uk" target="_blank">Join our mailing list</a></p>
