--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <img src="logo.svg" class=logo>
         <h1>Blockley&nbsp;Lodge</h1>
-        <h4>Of Antient, Free and Accepted Masons, N. 6345,&nbsp;Oxford</h4>
+        <h4>Of Antient, Free and Accepted Masons, &#8470; 6345,&nbsp;Oxford</h4>
         <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbsp;Master</h2>
         <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
