--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Recieve reports and notices of propositions.</li>
             <li>Close the Lodge.</li>
         </ol>
-<p><em>Dress: lounge or morning suit, undress regalia</em></p>
+<p><em>Dress: lounge or morning suit, mystic tie, undress regalia</em></p>
 
         <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline: Saturday 31 January<!--<span id="booking-deadline"></span>-->)</p>
 
