Update memoriam section with additional details

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary (Acting)<br>
             <a href="mailto:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
-            <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris</p>
+            <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris, 8 November 1939 &ndash; 2 December 2025</p>
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
