--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
-            <li>To take as read the Dispensation.</li>
+            <li>To take as read the Dispensations.</li>
             <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
            <!-- <li>Ballot for as joining members those brethren detailed in Annex A.</li> -->
-           <!-- <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li> -->
+            <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li>
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
             <li>Appoint and invest Officers of the Lodge.</li>
             <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
