Correct capitalization in agenda item

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
             <li>Appoint and invest Officers of the Lodge.</li>
             <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
-            <li>Recieve reports and notices of propositions.</li>
+            <li>Recieve Reports and Notices of Propositions.</li>
             <li>Close the Lodge.</li>
         </ol>
 <p><em>Dress: lounge or morning suit, mystic tie, undress regalia</em></p>
