--- a/index.html
+++ b/index.html
@@ -12,21 +12,18 @@
         <h1>Blockley&nbsp;Lodge</h1>
         <h4>Of Antient, Free and Accepted Masons, &#8470;6345,&nbsp;Oxford</h4>
         <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbsp;Master</h2>
-        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong>Saturday 7 February <!--<span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
+        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong><span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailto:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
-            <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris, <em>8 November 1939 &ndash; 2 December 2025</em></p>
+          <!--  <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris, <em>8 November 1939 &ndash; 2 December 2025</em></p> -->
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
-            <li>To take as read the Dispensations.</li>
             <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
-           <!-- <li>Ballot for as joining members those brethren detailed in Annex A.</li> -->
-            <li>Elect a Treasurer for the ensuing year.<br><em>The only nominations of which the Secretary is aware is  W. Bro. Dr Daniel Villar Maldonado, and subject to the provisions of rule 112, it is proposed to declare the ballot in their favour. Any member may, however, demand a&nbsp;ballot.</em></li>
-            <li>Install the Master Elect, Bro. Dr Alexander Ross Humphries.</li>
-            <li>Appoint and invest Officers of the Lodge.</li>
-            <li>Elect a brother to serve with the Worshipful Master on the Provincial Grand Lodge Committee.</li>
+            <li>Ballot for as joining members those brethren detailed in Annex A.</li>
+            <li>To invest Officers not present at the Installation Meeting</li>
+            <li>Ballot for and if successful intitate candidates detailed in Annex B.</li>
             <li>Recieve Reports and Notices of Propositions.</li>
             <li>Close the Lodge.</li>
         </ol>
