Update booking deadline in index.html
Uncommented the booking deadline span and removed the comment tags.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailto:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
-          <!--  <p class="memoriam"><em>In memoriam</em> W. Bro. Robert Harris, <em>8 November 1939 &ndash; 2 December 2025</em></p> -->
         <h3>Agenda</h3>
         <ol>
             <li>Open the Lodge.</li>
@@ -29,7 +28,7 @@
         </ol>
 <p><em>Dress: lounge or morning suit, mystic tie, undress regalia</em></p>
 
-        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline: Saturday 31 January<!--<span id="booking-deadline"></span>-->)</p>
+        <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline: <span id="booking-deadline"></span>)</p>
 
 <p class="psmall">Alms will be collected at dinner via the Lodge <a href="https://gtap.uk/L6345" target="_blank">Relief Chest</a>. Electronic donations are&nbsp;preferred.</p>
     
