--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Blockley&nbsp;Lodge</h1>
         <h4>Of Antient, Free and Accepted Masons, &#8470;6345,&nbsp;Oxford</h4>
         <h2>W. Bro. Dr Daniel Antonio Villar Maldonado, Worshipful&nbsp;Master</h2>
-        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong><span id="meeting-date"></span>--> at&nbsp;noon.</strong><br>
+        <p class="left">Dear Sir and Brother,<br>By command of the Worshipful Master, I hereby summon and invite you to attend the next regular meeting of the Blockley Lodge, to be held at: Cardinal House, OX44 9LT on <strong><span id="meeting-date"></span> at&nbsp;noon.</strong><br>
         Yours faithfully and fraternally,<br>
             W. Bro. Matthew Standage ProvGPurs, Secretary<br>
             <a href="mailto:secretary@blockleylodge.org.uk">secretary@blockleylodge.org.uk</a>
