Fix candidate ballot reference in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Ballot for as joining members those brethren detailed in Annex A.</li>
             <li>To invest Officers not present at the Installation Meeting</li>
-            <li>Ballot for and if successful intitate candidates detailed in Annex B.</li>
+            <li>Ballot for and if successful intitate candidates detailed in Annex A.</li>
             <li>Recieve Reports and Notices of Propositions.</li>
             <li>Close the Lodge.</li>
         </ol>
