Fix typos in index.html

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <li>Open the Lodge.</li>
             <li>Take as read and consider for confirmation the minutes of the last regular meeting.</li>
             <li>Ballot for as joining members those brethren detailed in Annex A.</li>
-            <li>To invest Officers not present at the Installation Meeting</li>
+            <li>To invest Officers not present at the Installation Meeting.</li>
             <li>Ballot for and if successful intitate candidates detailed in Annex A.</li>
-            <li>Recieve Reports and Notices of Propositions.</li>
+            <li>Receive Reports and Notices of Propositions.</li>
             <li>Close the Lodge.</li>
         </ol>
-<p><em>Dress: lounge or morning suit, mystic tie, undress regalia</em></p>
+<p><em>Dress: lounge or   morning suit, mystic tie, undress regalia</em></p>
 
         <p><strong>Dining:</strong> Please use this <a href="https://dining.blockleylodge.org.uk" target="_blank">booking form</a> (deadline: <span id="booking-deadline"></span>)</p>
 
